# zcash-verification-service

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  ORCHARD.md  README.md  README_RUST_CRATE.md  ROADMAP.md  STATELESS_VERIFICATION.md  build.rs  fetch-params.sh  generate_seed.sh  test_mempool.sh  verification.md  zvs-notify.py
proto/: compact_formats.proto  service.proto
src/: client.rs  lib.rs  main.rs  memo_rules.rs  mempool.rs  otp_queue.rs  otp_rules.rs  otp_send.rs  scan.rs  supabase.rs  sync.rs  verification.rs  wallet.rs
src/client/: mod.rs
src/memo/: mod.rs
zcashd-verification-service/: readme.md
zcashd-verification-service/api/: otp_service.py  verify_routes_rpc_zid_poll.py  verify_routes_rpc_zid_poll.vm.py
zcashd-verification-service/core/: supabase_client.py  zcash_rpc.py  zcash_runner.py
