[package]
name = "zvs"
version = "0.2.0"
edition = "2021"
description = "Zcash Verification Service"
license = "MIT"

[lib]
name = "zvs"
path = "src/lib.rs"

[[bin]]
name = "zvs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tonic = { version = "0.14", features = ["channel"] }
prost = "0.14"

# Core zcash dependencies - let these pull in compatible versions
zcash_client_backend = { version = "0.21", features = ["lightwalletd-tonic", "lightwalletd-tonic-tls-webpki-roots", "lightwalletd-tonic-transport", "orchard"] }
zcash_client_sqlite = { version = "0.19", features = ["orchard"] }
zcash_protocol = "0.7"
zcash_proofs = { version = "0.26", features = ["local-prover"] }
zcash_keys = { version = "0.12", features = ["orchard", "sapling"] }
zcash_primitives = "0.26"
zcash_note_encryption = "0.4"
sapling-crypto = "0.5"
zip32 = "0.2"
secrecy = "0.8"
rusqlite = "0.37"

# TLS
rustls = { version = "0.23", features = ["ring"] }

# Async
tokio-stream = "0.1"

# Utils
anyhow = "1"
rand = "0.8"
dotenvy = "0.15"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HMAC OTP generation
hmac = "0.12"
sha2 = "0.10"
zcash_address = "0.10.1"
